# test_git

./: .bumpversion.toml  .githubattributes  .pre-commit-config.yaml  issue_manager.py  pyproject.toml  requirements-issue-manager.txt  t.py
.github/: dependabot.yml
.github/workflows/: bump_version.yml  deploy_app.yml  issue_manager.yml  labeler.yml  open_pr.yml  poetry_bump_version.yml  pre-commit.yml  regenerate-lockfiles.yml  regenerate-uv-lock.yml  test.yml  update-pre-commit.yml  zizmor.yml
broken_app/: main.py  pyproject.toml
scripts/: open_pr.py
