[project]
name = "test-git"
version = "0.1.7"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "asyncer>=0.0.15,<0.0.17",
]

[project.optional-dependencies]
standard = [
    "typer >= 0.16.0,<0.25.0",
    "sqlmodel >= 0.0.30",
]

[dependency-groups]
dev = [
    "bump-my-version>=1.4.1",
    "prek>=0.4.5",
    "ruff>=0.15.18",
    "zizmor>=1.26.1",
]

github-actions = [
    "pydantic-settings >=2.1.0,<3.0.0",
    "pygithub >=2.3.0,<3.0.0",
    "pyyaml >=5.3.1,<7.0.0",
]
